# something2robot

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.py
auto_design/modules/: destruction_check.py  interference_removal.py  mesh_decomp.py  mesh_loader.py  motor_opt.py
docs/superpowers/plans/: 2026-07-15-runpy-agent-entrypoint.md  2026-07-16-web-joint-annotation-ui-plan.md
docs/superpowers/specs/: 2026-07-15-runpy-agent-entrypoint-design.md  2026-07-16-web-joint-annotation-ui-design.md  2026-07-17-project-cleanup-design.md
script/: add_motors_to_urdf.py  auto_design.py  auto_fit_joint.py  boolean_magnet_pockets.py  check_and_repair_links.py  check_joint_motion.py  export_motor_visualization.py  export_stl_to_mm.py  local_joint_voxel_tenon.py  pin_joint_demo.py  visualize_joints.py
