[project]
name = "something2robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "dash>=4.4.0",
    "fast-simplification>=0.1.13",
    "flask>=3.1.3",
    "kaleido==0.2.1",
    "matplotlib>=3.9.4",
    "meshio>=5.3.5",
    "numpy>=1.26.4",
    "open3d==0.18.0",
    "pin==2.7.0",
    "plotly>=6.9.0",
    "pyqt5>=5.15.11",
    "pytest>=8.4.2",
    "pyvista>=0.46.5",
    "pyvistaqt>=0.11.3",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tqdm>=4.68.4",
    "trimesh>=4.12.2",
    "urdfpy>=0.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
